--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 anyhow = "1.0.98"
 binseq = "0.6.3"
 clap = { version = "4.5.38", features = ["derive"] }
+csv = "1.3.1"
 num_cpus = "1.16.0"
+serde = { version = "1.0.219", features = ["derive"] }
