--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ binseq = "0.6.3"
 clap = { version = "4.5.38", features = ["derive"] }
 csv = "1.3.1"
 num_cpus = "1.16.0"
+parking_lot = "0.12.3"
 serde = { version = "1.0.219", features = ["derive"] }
