--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ clap = { version = "4.5.38", features = ["derive"] }
 csv = "1.3.1"
 disambiseq = "0.2.2"
 num_cpus = "1.16.0"
+paraseq = "0.3.7"
 parking_lot = "0.12.3"
 serde = { version = "1.0.219", features = ["derive"] }
